2007-01-20  Brandon Hale  <brandon@ubuntu.com>

	* po/sv.po:
	Add Swedish translation from Daniel Nylander
	* configure.ac:
	Add "sv" to ALL_LINGUAS

2007-01-15  Iain Holmes  <iain@gnome.org>

	* src/PlayerWindow.cs: Patch from Łukasz Jernaś to fix icons in a
	custom prefix.

2007-01-13  Brandon Hale  <brandon@ubuntu.com>
	
	* NEWS, configure.ac: Updated for Last Exit 4

2007-01-10  Brandon Hale  <brandon@ubuntu.com>

	* src/SpecialKeys.cs, src/PlayerWindow.cs:
	Patch from Rob Fisher to add support for multimedia keys.

2007-01-08  Brandon Hale  <brandon@ubuntu.com>

	* src/notify-sharp/, src/TrayIcon.cs:
	Patch from Sebastian Dröge on bug #394166 to use notify-sharp
	instead of pinvoking libnotify.

2007-01-06  Brandon Hale  <brandon@ubuntu.com>

	* src/DBusPlayer.cs:
	Implement ChangeStation functionality, this makes us feature complete
	compared to the old DBus code.

2007-01-06  Brandon Hale  <brandon@ubuntu.com>

	* src/DBusRemote, src/DBusPlayer:
	First commit of managed DBus port. Most functionality is missing
	from the old code, this will be filled in shortly.

2007-01-01  Brandon Hale  <brandon@ubuntu.com>

	* dbus-sharp/:
	Import managed DBus code for pending conversion.

2006-12-28  Brandon Hale  <brandon@ubuntu.com>

	* src/InfoWindow.cs, src/MagicCoverImage.cs:
	Fix crasher in InfoWindow when Song.Image is null.
	As a side effect, only load unknown-cover.png once, fixing
	a potential leak. Thanks to TJ Fontaine <tjfontaine@gmail.com>.

2006-12-28  Brandon Hale  <brandon@ubuntu.com>
	
	* src/TagDialog.cs, src/PlayerWindow.cs, src/FindStation.cs:
	Apply patch from Łukasz Jernaś to fix remaining l10n issues.
	Gnome bug #365091.

2006-12-23  Brandon Hale  <brandon@ubuntu.com>
	
	* src/InfoWindow.cs, src/TagDialog.cs, src/FirstRunDialog.cs:
	Use GTK stock buttons where appropriate.

2006-12-21  Brandon Hale  <brandon@ubuntu.com>

	* data/icons:
	Add 48 and 32 sizes for tag-new and show-icon icons.
	Thanks to Andreas on bug #384698.
